tests/suite/snapshots/suite__check__tests__check__bad_pa3_11.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_pa3_11.xi:2:16]
   │
 2 │ bar() { x:int, b:bool, _ = foo() }
   ·                ───┬──  
   ·                   ╰──── Expected bool but found int
───╯

